--- a/app/src/main/res/layout/deletion_menu.xml
+++ b/app/src/main/res/layout/deletion_menu.xml
@@ -17,7 +17,7 @@
         android:layout_height="0dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/roundcorner"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@android:color/darker_gray"
         android:text="Ja"
         app:layout_constraintBottom_toBottomOf="@id/guideline_X_1"
         app:layout_constraintEnd_toEndOf="@id/guideline_Y_2"
@@ -30,7 +30,7 @@
         android:layout_height="0dp"
         android:layout_marginLeft="10dp"
         android:background="@drawable/roundcorner"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@android:color/darker_gray"
         android:text="Abbrechen"
         app:layout_constraintBottom_toBottomOf="@id/guideline_X_1"
         app:layout_constraintEnd_toEndOf="@id/guideline_Y_3"
